config: setting application.properties ready for deployment